--- a/config
+++ b/config
@@ -41,7 +41,7 @@
       ratio = 0.5
       type = VPaned
     [[[terminal3]]]
-      command = source /opt/ros/melodic/setup.bash;source ~/catkin_ws1/devel/setup.bash;rosrun collabot_do run.py;bash
+      command = source /home/kist/collabot_t.bash;rosrun collabot_do run.py;bash
       order = 0
       parent = child2
       profile = collabot_set
@@ -49,7 +49,7 @@
       type = Terminal
       uuid = 8f77acc1-55c8-41b2-98b4-e467fcbc5d88
     [[[terminal4]]]
-      command = source /opt/ros/melodic/setup.bash;source ~/catkin_ws1/devel/setup.bash;sleep 1s; rosrun rosserial_python serial_node.py _port:=/dev/ttyACM0;bash
+      command = source /home/kist/collabot_t.bash;sleep 1s; rosrun rosserial_python serial_node.py _port:=/dev/ttyACM0;bash
       order = 1
       parent = child2
       profile = collabot_set
@@ -57,7 +57,7 @@
       type = Terminal
       uuid = 5862c8a7-63d4-4cc9-915e-12196c1b9cca
     [[[terminal6]]]
-      command = source /opt/ros/melodic/setup.bash;source ~/catkin_ws1/devel/setup.bash;sleep 2s; roslaunch az_body_tracker run.launch;bash
+      command = source /home/kist/collabot_t.bash;sleep 2s; roslaunch az_body_tracker run.launch;bash
       order = 0
       parent = child5
       profile = collabot_set
@@ -65,11 +65,73 @@
       type = Terminal
       uuid = ca47c9a4-3e5b-46bc-b54f-5f399e0e3b19
     [[[terminal7]]]
-      command = source /opt/ros/melodic/setup.bash;source ~/catkin_ws1/devel/setup.bash;sleep 2s; roslaunch collabot_do ssim.launch;bash
+      command = source /home/kist/collabot_t.bash;sleep 2s; roslaunch collabot_do ssim.launch;bash
       order = 1
       parent = child5
       profile = collabot_set
       title = test
+      type = Terminal
+      uuid = 6ddf5566-cced-42af-b475-3558c81ab173
+  [[collabot_opt]]
+    [[[child0]]]
+      fullscreen = False
+      last_active_term = 8f77acc1-55c8-41b2-98b4-e467fcbc5d88
+      last_active_window = True
+      maximised = False
+      order = 0
+      parent = ""
+      position = 167:127
+      size = 2000, 1200
+      title = Collabot
+      type = Window
+    [[[child1]]]
+      order = 0
+      parent = child0
+      position = 666
+      ratio = 0.5
+      type = HPaned
+    [[[child2]]]
+      order = 0
+      parent = child1
+      position = 443
+      ratio = 0.5
+      type = VPaned
+    [[[child5]]]
+      order = 1
+      parent = child1
+      position = 443
+      ratio = 0.5
+      type = VPaned
+    [[[terminal3]]]
+      command = source /home/kist/collabot_t.bash;rosrun collabot_do run.py;bash
+      order = 0
+      parent = child2
+      profile = collabot_set
+      title = Main
+      type = Terminal
+      uuid = 8f77acc1-55c8-41b2-98b4-e467fcbc5d88
+    [[[terminal4]]]
+      command = source /home/kist/collabot_t.bash;sleep 1s; rosrun rosserial_python serial_node.py _port:=/dev/ttyACM0;bash
+      order = 1
+      parent = child2
+      profile = collabot_set
+      title = OpenCR
+      type = Terminal
+      uuid = 5862c8a7-63d4-4cc9-915e-12196c1b9cca
+    [[[terminal6]]]
+      command = source /home/kist/collabot_t.bash;sleep 2s; roslaunch az_body_tracker run.launch;bash
+      order = 0
+      parent = child5
+      profile = collabot_set
+      title = Body_tracker
+      type = Terminal
+      uuid = ca47c9a4-3e5b-46bc-b54f-5f399e0e3b19
+    [[[terminal7]]]
+      command = source /home/kist/collabot_t.bash;conda activate collabot;cd ~/yolov5;python detect_book_state.py;bash
+      order = 1
+      parent = child5
+      profile = collabot_set
+      title = Drawer_detector
       type = Terminal
       uuid = 6ddf5566-cced-42af-b475-3558c81ab173
 [plugins]
